Fix alignment issues - firefox mobile

--- a/src/styles/sass/pages/_about.scss
+++ b/src/styles/sass/pages/_about.scss
@@ -39,7 +39,13 @@
   &--5::before,
   &--5::after { animation-delay: 7s; }
 
-  &--stack { display: inline; }
+  &--before {
+    &::after { border: none; }
+  }
+
+  &--after {
+    &::before { border: none; }
+  }
 }
 
 .quote-title,
